# databricks-engine-optimization

./: .gitignore  IMPORT_STRUCTURE.md  Makefile  README.md  demo.py  docker-compose.yaml  pyproject.toml  requirements.txt
apm_spark_auditor/: __init__.py
apm_spark_auditor/auditor/: engine.py
apm_spark_auditor/context/: environment_provider.py
apm_spark_auditor/decorators/: __init__.py
apm_spark_auditor/finops/: cost_translator.py
apm_spark_auditor/readers/: dataframe_reader.py  event_log_reader.py
apm_spark_auditor/reporters/: console_reporter.py
apm_spark_auditor/rules/: physical_rules.py  query_rules.py
apm_spark_auditor/run/: main_trigger.py
apm_spark_auditor/suggestions/: remediation_engine.py  suggestions_templates.py
docker/app/: dockerfile
generators/data/: mock_raw_generator.py
generators/etl/: bronze_pipelines.py
notebooks/: 01_laboratory_setup.ipynb  02_performance_auditor.ipynb  all tests at one time.ipynb  trigger.ipynb
src/adapters/: base.py  vanilla_spark.py
src/auditor/: engine.py  models.py
src/context/: environment_provider.py
src/decorators/: __init__.py
src/finops/: cost_translator.py
src/policies/: policy_manager.py
src/readers/: dataframe_reader.py  event_log_reader.py
src/reporters/: console_reporter.py
src/rules/: physical_rules.py  query_rules.py
src/run/: main_trigger.py
src/suggestions/: remediation_engine.py  suggestions_templates.py
tests/: .coverage  README.md  Run_Tests_Notebook.py  TEST_COVERAGE.md  conftest.py  pytest.ini  run_tests.sh
tests/integration/: test_engine_integration.py  test_engine_integration_local.py
tests/system/: test_e2e_databricks.py  test_e2e_local.py  test_end_to_end.py
tests/unit/: test_engine.py  test_engine_databricks.py  test_engine_local.py  test_physical_rules.py  test_query_rules.py  test_readers.py  test_rules_databricks.py  test_rules_local.py
